--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: published
-        publish_dir: published/*
+        publish_dir: published
         destination_dir: .
-        exclude_assets: '.github,published/README.md'
+        exclude_assets: '.github,README.md'
